--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,41 @@
 body {
     margin: 0;
-    background: gray;
+    background:rgb(93, 160, 73);
     text-align: center;
+    color:white
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color:yellow;
+  }
+  
+li {
+    float: none;
+}
+  
+li a {
+    display: block;
+    color:blue;
+    text-align: center;
+    padding: 16px;
+    text-decoration: none;
+}
+  
+li a:hover {
+    background-color:yellowgreen;
+}
+
+h2 {
+    text-align:left;
+    padding-left: 20px;
+    font-size: 30px;
+}
+
+h3 {
+    text-align:left;
+    padding-left: 20px;
+    font-size:20px;
 }
